--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -122,6 +122,7 @@ es:
     sn: "Numero de Serie"
     mark: "Marca"
     workstation?: "Puesto?"
+    bill: "Recibo"
 
   printers:
     title: "Impresoras"
@@ -181,6 +182,10 @@ es:
     companies : "Empresas"
     list-companies : "Listar empresas"
     company-new : "Nueva"
+
+    bills : "Recibos"
+    list-bills : "Listar recibos"
+    bill-new : "Nuevo recibo"
 
     users: "Usuarios"
     users-list: "Lista de usuarios"
