- Models   * added relationships between bill model and all the model
- Views and forms
  * added code bill field in forms and list

- Locales
  * added new translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -98,24 +98,28 @@ en:
     new: "New motherboard"
     computer: "In computer"
     back: "Back"
+    bill: "Bill"
 
   harddisks:
     model: "Model"
     sn: "Serial Number"
     mark: "Mark"
     size : "Size"
+    bill: "Bill"
 
   dvds:
     model: "Model"
     sn: "Serial Number"
     mark: "Mark"
     burn: "Burn"
+    bill: "Bill"
 
   cds:
     model: "Model"
     sn: "Serial Number"
     mark: "Mark"
     burn: "Burn"
+    bill: "Bill"
 
   screens:
     title: "Screens"
@@ -131,12 +135,14 @@ en:
     sn: "Serial Number"
     mark: "Mark"
     workstation?: "Workstation?"
+    bill: "Bill"
 
   memories:
     model: "Model"
     sn: "Serial Number"
     size : "Size"
     mark: "Mark"
+    bill: "Bill"
 
   marks:
     mark: "Mark"
