- Partials and views   * added field tags html of date
- Locales
  * new translation

- Migration
  * added data field in bills table

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,7 @@ en:
   bill:
     code: 'Code'
     company: 'Company'
+    date: 'Date of bill'
     edit: "Modify"
     create: "Create"
     back: "Back"
