- Controllers   * added paginate in bill controller   * added constant PER_PAGE in computers controller
- Models
  * adde nullify clause and a named scope to get the list of bills
    for each company

- Partials and Views
  * added new partials selector and list for company in bills module
  * adapted views to show this partials

- Layouts
  * changes in bill layout to show the partial to select companies

- Locales
  * added new translations for bill module

- Routes
  * added new route to bills module

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,7 @@ en:
     back: "Back"
     new: "Add new bill"
     show: "Show"
+    select-by-company: "Select list by company"
 
   company:
     name: "Name"
