- Helpers   * added new method to use an specific kind of character     for some languages in application helper   * added flag of french language
- Partial
  * refactorin of head partial

- Images
  * added flag of french language

-Locales
  * change legend in title translation of page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,7 +31,7 @@ en:
     edit: "Edit"
 
   inventory:
-    title: "Inventory"
+    title: "Inventory of hardware"
 
   workstations:
     computer: "Computer"
