--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -28,7 +28,7 @@ es:
     edit: "Editar"
 
   inventory:
-    title: "Inventory"
+    title: "Inventario de hardware"
 
   workstations:
     computer: "Pc"
