- Partial   * translated pages menu options
- Locales
  * added new translations for pages

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -197,6 +197,10 @@ es:
 
 
   menu:
+    pages: "Paginas"
+    list-pages: "Listar paginas"
+    new-page: "Nueva pagina"
+
     companies : "Empresas"
     list-companies : "Listar empresas"
     company-new : "Nueva"
