--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -200,19 +200,28 @@ en:
     n: "no"
 
   menu:
+    #Pages
+    pages: "Pages"
+    list-pages: "List pages"
+    new-page: "New page"
+
+    #Companies
     companies : "Companies"
     list-companies : "List of companies"
     company-new : "New"
 
+    #Bills
     bills : "Bills"
     list-bills : "List all bills"
     bill-new : "New bill"
 
+    #Users
     users: "Users"
     users-list: "List of Users"
     users-admin?: "Administrator?"
     user: "User : "
 
+    #Account
     account : "Your account"
     new-account : "New account"
     account-edit : "Edit data of your account"
