- Locales   * added translation
- Library
  * added workstations report inside of place report

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -75,6 +75,7 @@ en:
     computer: "Computers"
     screen: "Screens"
     printer: "Printers"
+    workstations: "Workstations"
     description: "Description"
     name: "Name"
     create: "Create"
