--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -69,6 +69,7 @@ es:
     screen: "Monitores"
     printer: "Impresoras"
     description: "Descripcion"
+    workstations: "Equipos"
     name: "Nombre"
     edit: "Editar"
     create: "Agregar"
