--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -72,6 +72,7 @@ fr:
     computer: "Ordinateurs"
     screen: "Moniteures"
     printer: "Imprimantes"
+    workstations: "Equipes"
     description: "Descripcion"
     name: "Nom"
     edit: "Éditer"
